# movie_database

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
client/: Cargo.toml  index.html
client/src/: app.rs  main.rs
client/src/pages/: index.rs  mod.rs  movie_detail.rs
client/style/: tailwind.css
server/: .env  Cargo.toml
server/migrations/: 20240706103646_table.sql
server/src/: app.rs  lib.rs  main.rs  utils.rs
server/src/routers/: mod.rs  root.rs
server/tests/: api.rs  healthy_check.rs  sql.rs
server/tests/helper/: mod.rs
ui-admin/: Cargo.toml  Dioxus.toml
ui-user/: Cargo.toml
