[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.12", features = ["csr"] }
log = "0.4.22"
console_log = "1"
leptos_router = { version = "0.6.12", features = ["csr"] }
web-sys = {version = "0.3", features = ["Document", "Window", "ViewTransition"]}
