[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
tokio = { workspace = true }
reqwest = { workspace = true }

axum = {version = "0.7", features = ["macros"]}
sqlx = {version = "0.7", features = ["mysql", "runtime-tokio"]}
dotenvy = "0.15"
